# dedale

./: Cargo.toml  README.md
.devcontainer/: docker-compose.yml
config/: development.yaml  test.yaml
examples/: playground.rs
migration/src/: lib.rs
src/: app.rs
src/controllers/: auth.rs  notes.rs  user.rs
src/initializers/: view_engine.rs
src/mailers/: auth.rs
src/models/: mod.rs  users.rs
src/models/_entities/: apps.rs  machines.rs  mod.rs  prelude.rs  users.rs
src/proxy/: mod.rs  service_starter.rs  service_stopper.rs
src/proxy/backend/: docker.rs  mod.rs
src/tasks/: seed.rs
tests/models/: mod.rs  users.rs
tests/requests/: auth.rs  notes.rs  prepare_data.rs  user.rs
