[workspace]

[package]
name = "dedale"
version = "0.1.0"
edition = "2021"
default-run = "dedale-server"

[features]
default = ["backend_docker", "client_cli"]
backend_docker = ["dep:bollard"]
client_cli = ["dep:clap"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

loco-rs = { version = "0.4" }
migration = { path = "migration" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
eyre = "0.6"
tokio = { version = "1.33", default-features = false, features = ["sync"] }
async-trait = "0.1"
tracing = "0.1"
chrono = "0.4"
validator = { version = "0.16" }
sea-orm = { version = "1.0.0-rc.1", features = [
  "sqlx-sqlite",
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "macros",
] }

axum = "0.7"
include_dir = "0.7"
uuid = { version = "1.6", features = ["v4"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# view engine i18n
fluent-templates = { version = "0.8", features = ["tera"] }
unic-langid = "0.9"
# /view engine

# backends
bollard = { version = "0.16", optional = true }
# /backends

# HACK: https://github.com/launchbadge/sqlx/issues/3189
time = "=0.3.34"
clap = { version = "4.5.4", features = ["env", "derive"], optional = true }

[[bin]]
name = "dedale-server"
path = "src/bin/dedale_server.rs"
required-features = []

[[bin]]
name = "dedalectl"
path = "src/bin/dedalectl/main.rs"
required-features = ["client_cli"]

[dev-dependencies]
serial_test = "2.0"
rstest = "0.18"
loco-rs = { version = "0.4", features = ["testing"] }
insta = { version = "1.34", features = ["redactions", "yaml", "filters"] }

# proxy
[dependencies.pingora]
# git = "https://github.com/cloudflare/pingora.git"
git = "https://github.com/joxcat/pingora.git"
version = "0.1"
features = ["proxy"]
# /proxy
